--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* UTILITY CLASSES */
 .heading-xl {
-  font-size: 5.5rem;
+  font-size: 2.5rem;
   font-weight: 700;
   line-height: 5.5rem;
   letter-spacing: -0.15625rem;
@@ -8,7 +8,7 @@
 }
 
 .heading-l {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 3.5rem;
   letter-spacing: -0.09375rem;
@@ -27,4 +27,24 @@
   font-weight: 500;
   line-height: 1.75rem;
   color: var(--clr-font-secondary);
+}
+
+@media only screen and (min-width: 24em) {
+  .heading-xl {
+    font-size: 4.5rem;
+  }
+  
+  .heading-l {
+    font-size: 3rem;
+  }
+
+  .heading-m {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .heading-xl {
+    font-size: 5.5rem;
+  }
 }
