--- a/src/index.css
+++ b/src/index.css
@@ -105,4 +105,6 @@ button {
 /* GENERAL STYLES */
 :root {
   font-family: "Space Grotesk", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--clr-font-primary);
+  background-color: var(--clr-primary);
 }
