--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 /* UTILITY CLASSES */
+.container {
+  width: 90%;
+  max-width: 70em;
+  margin: 0 auto;
+}
+
 .heading-xl {
   font-size: 2.5rem;
   font-weight: 700;
