--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  margin-top: .5rem;
+  margin-top: 1rem;
   position: absolute;
   z-index: 999;
   width: 100%;
@@ -11,8 +11,11 @@
   align-items: center;
 }
 
-@media only screen and (min-width: 24em) {
+@media only screen and (min-width: 31.25em) {
   .header {
+    margin-top: 2rem;
+  }
+}
 
 @media only screen and (min-width: 78em) {
   .header {
