Fix padding rule for header

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -18,7 +18,7 @@
 }
 
 @media only screen and (min-width: 78em) {
-  .header {
-    padding-right: 4rem;
+  .header > *:first-child {
+    padding-right: 2rem;
   }
 }
