--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@
   margin: 0 auto;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .heading-xl {
   font-size: 2.5rem;
   font-weight: 700;
