Fix paths starting with /public

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -5,7 +5,7 @@
 }
 
 .hero::before {
-  content: url(/public/3d-circles.png);
+  content: url(/3d-circles.png);
   position: absolute;
   z-index: -999;
   top: 100px;
