Change letter-spacing and line-heights from rem to em

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -54,7 +54,7 @@
   font-size: .8rem;
   font-weight: 500;
   letter-spacing: .12em;
-  line-height: 2rem;
+  line-height: 2em;
   text-transform: uppercase;
   text-underline-offset: .5em;
   margin-top: 3rem;
