--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 .heading-xl {
   font-size: 2.5rem;
   font-weight: 700;
-  line-height: 1;
+  line-height: 1.25em;
   letter-spacing: -.025em;
   color: var(--clr-font-primary);
 }
@@ -28,15 +28,15 @@
 .heading-l {
   font-size: 2rem;
   font-weight: 700;
-  line-height: 3.5rem;
-  letter-spacing: -0.09375rem;
+  line-height: 1.25em;
+  letter-spacing: -0.025em;
   color: var(--clr-font-primary);
 }
 
 .heading-m {
   font-size: 1.5rem;
   font-weight: 700;
-  line-height: 2rem;
+  line-height: 1em;
   color: var(--clr-font-primary);
 }
 
@@ -50,7 +50,6 @@
 @media only screen and (min-width: 28em) {
   .heading-xl {
     font-size: 4rem;
-    line-height: 4.5rem;
   }
   
   .heading-l {
@@ -65,7 +64,8 @@
 @media only screen and (min-width: 55em) {
   .heading-xl {
     font-size: 5.5rem;
-    line-height: 6.5rem;
-    letter-spacing: -0.15625rem;
+    letter-spacing: -0.03em;
   }
 }
+
+/* TODO: Add hover/active/focus styles to interactive elements */
