--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -75,7 +75,7 @@
 
 .photo {
   width: 60%;
-  max-width: 300px;
+  max-width: 18.75em;
   object-fit: cover;
   object-position: top center;
 }
@@ -126,7 +126,7 @@
 @media only screen and (min-width: 55em) {
   .photo {
     margin-right: 0;
-    max-width: 420px;
+    max-width: 26.25em;
   }
 
   .hero::after {
