--- a/src/App.css
+++ b/src/App.css
@@ -74,4 +74,4 @@
   }
 }
 
-/* TODO: Add hover/active/focus styles to interactive elements */
+/* TODO: Add hover/active/focus styles to interactive elements - make project images slightly bigger on hover  */
