--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -1,12 +1,15 @@
 .heading {
-  margin-top: 4rem;
+  margin-top: 3.5rem;
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-  gap: 3rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  margin-top: 6rem;
 }
 
 .name {
@@ -21,14 +24,16 @@
 
 .tech {
   display: flex;
-  gap: 1rem;
-  margin-top: 1rem;
+  flex-wrap: wrap;
+  column-gap: 1rem;
+  margin-top: .5rem;
+  margin-bottom: 1.5rem;
 }
 
 .buttons {
   display: flex;
   gap: 2rem;
-  margin-top: 2rem;
+  margin-top: auto;
 }
 
 .button {
@@ -40,9 +45,41 @@
   border-radius: 1000px;
 }
 
+.description {
+  margin-top: 2rem;
+  color: var(--clr-font-secondary);
+}
+
 .explanation {
   margin-top: 1rem;
   color: rgb(180, 180, 180);
 }
 
-/* TODO: add media queries for some gaps and font sizes */
+@media only screen and (min-width: 28em) {
+  .heading {
+    margin-top: 5rem;
+  }
+
+  .grid {
+    margin-top: 3rem;
+  }
+}
+
+@media only screen and (min-width: 40em) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
+    column-gap: 3rem;
+    row-gap: 8rem;
+  }
+
+  .card {
+    margin-top: 0;
+  }
+}
+
+@media only screen and (min-width: 55em) {
+  .grid {
+    margin-top: 4rem;
+  }
+}
