--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -67,6 +67,10 @@
 }
 
 @media only screen and (min-width: 40em) {
+  .heading {
+    margin-bottom: 0;
+  }
+
   .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
