--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -15,6 +15,7 @@
 
 .name {
   margin-top: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .zoom-container {
@@ -42,7 +43,6 @@
   flex-wrap: wrap;
   column-gap: 1rem;
   margin-top: .5rem;
-  margin-bottom: 1.5rem;
 }
 
 .buttons {
@@ -55,13 +55,13 @@
   text-decoration: underline;
   text-underline-offset: .25em;
   text-decoration-color: var(--clr-accent);
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   font-weight: bold;
   border-radius: 1000px;
 }
 
 .description {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   color: var(--clr-font-secondary);
 }
 
@@ -77,6 +77,14 @@
 
   .grid {
     margin-top: 3rem;
+  }
+
+  .tech {
+    margin-top: 1rem;
+  }
+
+  .button {
+    font-size: 1.75rem;
   }
 }
 
