--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -21,12 +21,16 @@
 
 .links {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 1.5rem;
   justify-content: space-between;
   margin-top: 8rem;
 }
 
 .email {
   font-style: normal;
+  font-size: 1.25rem;
 }
 
 hr {
@@ -41,10 +45,6 @@ hr {
 
   .footer::before {
     right: -300px;
-  }
-
-  .email {
-    font-size: 1.25rem;
   }
 }
 
@@ -62,6 +62,10 @@ hr {
   .text {
     max-width: 45ch;
   }
+
+  .email {
+    font-size: 1.75rem;
+  }
 }
 
 @media only screen and (min-width: 55em) {
@@ -78,10 +82,6 @@ hr {
 
   .text {
     margin: 1rem 0 0;
-  }
-
-  .email {
-    font-size: 1.5rem;
   }
 }
 
