--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -11,9 +11,19 @@
   align-items: center;
 }
 
+.name {
+  font-size: 1.75rem;
+}
+
 @media only screen and (min-width: 31.25em) {
   .header {
     margin-top: 2rem;
+  }
+}
+
+@media only screen and (min-width: 40em) {
+  .name {
+    font-size: 2.25rem;
   }
 }
 
