--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -113,12 +113,22 @@
     max-width: 50ch;
   }
 
+  .email {
+    font-size: 1rem;
+  }
+
   .photo {
     margin-right: -5.5%;
   }
 
   .links > * {
     justify-content: start;
+  }
+} 
+
+@media only screen and (min-width: 40em) {
+  .title {
+    margin-top: 9rem;
   }
 }
 
